@@ -12,6 +12,7 @@ fixed bugs:
 - fixed several bugs where variables or constraints were not freed correctly
 - fixed minor bugs in presolving in cons_setppc.c and cons_logicor.c
 - do not multi-aggregate variables if the constant would be a huge value in order to avoid numerical troubles
+- fixed bug with infinite multi-aggregation constants
 
 data structures
 - new data structure for (circular) queues (SCIP_QUEUE)
